// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Paragraph component Matches the snapshot 1`] = `
<DocumentFragment>
  <p
    class="ssb-paragraph"
  >
    Paragraph
  </p>
</DocumentFragment>
`;

exports[`Paragraph component Toggles classNames correctly 1`] = `
<DocumentFragment>
  <p
    class="ssb-paragraph negative mt-3"
  >
    Paragraph
  </p>
</DocumentFragment>
`;
